@@ -1223,7 +1223,8 @@ function sw_log($message, $priority = null){
 function action_log($screen_name, $action, $msg=null, $success = true, $opt = array()){
     global $config;
 
-    $opt['action_str'] = is_array($action) ? $action['action'] : $action; 
+    $opt['action_str'] = is_array($action) ? $action['action'] : $action;
+    $opt['errors'] = ErrorHandler::get_errors_array(); 
 
     if (!empty($config->custom_act_log_function)){
         call_user_func($config->custom_act_log_function, $screen_name, $action, $msg, $success, $opt);  
